[tool.poetry]
name = "kvom"
version = "0.1.0"
description = "key-value store object mapping"
authors = ["ischaojie <zhuzhezhe95@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
pydantic = "^1.9.0"
python-ulid = "^1.0.3"
redis = "^4.1.3"

[tool.poetry.dev-dependencies]
pytest = "^7.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
