[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kvom"
description = "key-value store object mapping"
dynamic = ["version"]
authors = [
    { name = "chaojie", email = "hi@chaojie.fun" },
]
dependencies = [
    "pydantic",
    "pymongo",
    "redis",
]

[project.urls]
Source = "https://github.com/ischaojie/kvom"

[tool.hatch.version]
path = "kvom/__init__.py"


[tool.hatch.envs.default]
dependencies = [
    "pytest",
    "pytest-cov",
    "black",
    "mypy",
    "isort",
    "flake8",
    "pytest-xdist",
    "autoflake"
]

[tool.hatch.envs.default.scripts]
clean = ["git clean"]
check = [
    "flake8 kvom tests --max-line-length=90",
    "black --check --diff kvom tests",
    "isort --check-only --diff kvom tests",
    # "mypy kvom"
]
lint = [
    "autoflake -r kvom tests",
    "isort kvom tests",
    "black kvom tests",
]
test = [
    "pytest tests/ -s --cov=kvom --cov-config=pyproject.toml --cov-report=term-missing --cov-report=xml --cov-fail-under=70",
]
report = ["coverage report -m"]
all = ["check", "test"]

[tool.isort]
profile = "black"
